# svelte-wasi-with-rust

./: .gitignore  README.md  package.json  rollup.config.js
public/: bundle.css  bundle.js  index.html
scripts/: wbg_to_wasi.js
src/: App.svelte  main.js
src/greeting/: Cargo.toml
src/greeting/src/: lib.rs
src/rust-wasi/: .gitignore  Cargo.toml  README.md
src/rust-wasi-example/: Cargo.toml
src/rust-wasi-example/src/: main.rs  test.js
src/rust-wasi/src/: main.rs
