[package]
name = "wasi-example"
version = "0.1.0"
description = "A tool for executing HQ9+ source code to demo WASI"
authors = ["The Wasmer Engineering Team <engineering@wasmer.io>"]
repository = "https://github.com/wasmerio/rust-wasi-example"
edition = "2018"

[dependencies]
js-sys = "0.3.46"
log = "0.4.11"
num-integer = "0.1.44"
serde = { version = "1.0.120", features = ["derive"] }
serde_json = "1.0.61"
sha3 = "0.9.1"
structopt = "0.2"
wasm-bindgen = "^0.2"
# web-sys = "0.3.46"

# [dependencies.web-sys]
# version = "0.3.6"
# features = [
#   'Document',
#   'Element',
#   'HtmlElement',
#   'Node',
#   'Window',
# ]